# ComiRadar

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.ja.md  README.md  README.zh-CN.md  README.zh-Hant.md  SECURITY.md  _ai_worker.py  _bilibili_worker.py  _ciefc_worker.py  _playwright_worker.py  config.py  docker-compose.yml  logger.py  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  schedule.yml
db/: schema.py  store.py
notifiers/: bark.py  base.py  serverchan.py
pipeline/: ai_extractor.py  dedup.py  extractor.py  hotspot_discovery.py  normalizer.py  orchestrator.py
scrapers/: base.py  chinajoy.py  ciefc.py  health.py  nyato.py
scrapers/social/: bilibili_dynamic.py  weibo.py  xiaohongshu.py
scrapers/ticketing/: bilibili.py  damai.py  maoyan.py  piaoxingqiu.py  showstart.py  yongle.py
scripts/: setup_cookies.py
tests/: test_config.py  test_db.py  test_dedup.py  test_extractor.py  test_health.py  test_integration.py  test_main.py  test_normalizer.py  test_notifiers.py  test_orchestrator.py
