[project]
name = "comiradar"
version = "0.1.0"
description = "Anime event scraper for China — 9 ticketing platforms, auto dedup, blog integration"
readme = "README.md"
license = "MIT"
authors = [
    { name = "DreamNight", email = "support@dreamnight.net.cn" }
]
keywords = ["anime", "scraper", "events", "bilibili", "china"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "chinese-scraper-utils>=0.2.1",
    "httpx>=0.28",
    "parsel>=1.10",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "rapidfuzz>=3.0",
    "pyyaml>=6.0",
    "browser-cookie3>=0.19",
    "python-dotenv>=1.0",
    "playwright>=1.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "bandit>=1.7",
    "types-pyyaml>=6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
lint.select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
lint.ignore = ["B904", "E741", "SIM102", "SIM105", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"_*_worker.py" = ["E501"]
"scripts/*" = ["E501"]
"tests/*" = ["E501"]
"pipeline/normalizer.py" = ["E501"]
"pipeline/extractor.py" = ["E501"]
"pipeline/orchestrator.py" = ["E501"]
"main.py" = ["E501"]
"scrapers/ticketing/maoyan.py" = ["E501"]
"scrapers/social/weibo.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["comiradar"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.urls]
Homepage = "https://github.com/sixtdreanight/ComiRadar"
Repository = "https://github.com/sixtdreanight/ComiRadar.git"
Issues = "https://github.com/sixtdreanight/ComiRadar/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
